@@ -7,7 +7,6 @@ WXPYTHONDIR="/usr/lib/=PY/site-packages/wxPython"
 if [ "$1" = "configure" ]; then
 	python /usr/lib/=PY/compileall.py -q ${WXPYTHONDIR}
 	python -O /usr/lib/=PY/compileall.py -q ${WXPYTHONDIR}
-	ldconfig
 fi
 
 #DEBHELPER#
