@@ -1,4 +1,4 @@
-usr/lib/python1.5/site-packages/wxPython
+usr/lib/=PY/site-packages/wxPython
 usr/lib/libwxPyHelpers*.so
 usr/lib/libwxPyHelpers*.so.*
 
